package abstractfactory;

public abstract class Chair {
}
