package abstractfactory;

public class ModernChair extends Chair{
}
