package abstractfactory;

public class ModernTable extends Table{
}
