package abstractfactory;

public abstract class Table {
}
