package abstractfactory;

public class VictorianChair extends Chair{
}
