package abstractfactory;

public class VictorianTable extends Table{
}
